Partially fixed overlapping bug and remodeled expand/collapse button

--- a/src/app/static/preview-question/preview-question.component.css
+++ b/src/app/static/preview-question/preview-question.component.css
@@ -53,3 +53,8 @@ mat-chip {
 .high {
   box-shadow: inset 0 0 1px 4px #ffd13b;
 }
+
+.centered {
+  display: flex;
+  justify-content: center;
+}
